--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <table cellspacing="30">
       <tr>
         <td><a href="https://www.linkedin.com/in/rohan-matre-b0b334221/?originalSubdomain=in">
-          <img src="image/Rohanimage-modified.png" alt="Rohan Profile Photo"></a></td>
+          <img src="Rohanimage-modified.png" alt="Rohan Profile Photo"></a></td>
         <td>
         <h1> Rohan Matre </h1>
         <p><em>Hi! I am <strong><a href="https://www.pdpu.ac.in/">PDEU</a></strong> student.</em></p>
@@ -68,15 +68,15 @@
       <tbody>
         <tr>
           <td><a href="https://www.hackerrank.com/domains/c?filters%5Bstatus%5D%5B%5D=unsolved&badge_type=c">C</a></td>
-          <td>⭐⭐⭐⭐</td>
+          <td>⭐⭐⭐</td>
           <td><a href="https://www.hackerrank.com/domains/java?filters%5Bstatus%5D%5B%5D=unsolved&badge_type=java">Java</td>
-            <td>⭐⭐⭐</td>
+            <td>⭐⭐</td>
         </tr>
         <tr>
           <td><a href="https://www.codechef.com/users/rohanmatre">C++</td>
-            <td>⭐⭐⭐⭐</td>
+            <td>⭐⭐⭐</td>
             <td><a href="https://www.hackerrank.com/domains/python?filters%5Bstatus%5D%5B%5D=unsolved&badge_type=python">Python</a></td>
-              <td>⭐⭐⭐⭐</td>
+              <td>⭐⭐</td>
         </tr>
       </tbody>
     </table>
